--- a/views/index.html
+++ b/views/index.html
@@ -44,10 +44,11 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Keepsakes Cafe</div>
-        <img src="/images/2.JPG" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Compostela Valley</div>
+        <img src="/images/7.JPG" alt="House" style="width:99%">
       </div>
     </div>
+    
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Boxed Up</div>
@@ -56,37 +57,40 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Parola Cape San Agustin</div>
+        <img src="/images/20.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+   
+  </div>
+
+  <div class="w3-row-padding">
+  	<div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Bagangga</div>
         <img src="/images/8.JPG" alt="House" style="width:100%">
       </div>
     </div>
-  </div>
-
-  <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Statue of David</div>
-        <img src="/images/11.JPG" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">UIC Main Campus</div>
+        <img src="/images/23.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">New Bataan Compostela</div>
-        <img src="/images/12.JPG" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Keepsakes Cafe</div>
+        <img src="/images/2.JPG" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Coffee Grounds</div>
-        <img src="/images/14.JPG" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Assumption Hall</div>
+        <img src="/images/24.JPG" alt="House" style="width:99%">
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Parola Cape San Agustin</div>
-        <img src="/images/19.JPG" alt="House" style="width:99%">
-      </div>
-    </div>
+    
+    
   </div>
 
   <!-- About Section -->
